--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="col-12 col-md-6 col-lg-4 ">
                 <div class="header">
                     <div class="top-info">
-                        <div class="title">TODO with local storage</div>
+                        <div class="title">TODO-JS with local storage</div>
                         <div class="clear">
                             <i class="fa fa-refresh" aria-hidden="true"></i>
                         </div>
